# bestscout

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  AvailabilityWorkspace.test.tsx  AvailabilityWorkspace.tsx  ClubWorkspace.test.tsx  ClubWorkspace.tsx  ComparisonWorkspace.tsx  CompetitionWorkspace.test.tsx  CompetitionWorkspace.tsx  DatabaseWorkspace.tsx  EditorWorkspace.test.tsx  EditorWorkspace.tsx  FacepackWorkspace.test.tsx  FacepackWorkspace.tsx  FreezerWorkspace.test.tsx  FreezerWorkspace.tsx  IntelligenceWorkspace.test.tsx  IntelligenceWorkspace.tsx  PeopleWorkspace.test.tsx  PeopleWorkspace.tsx  RoleExplorer.tsx  ShortlistWorkspace.tsx  SquadAnalysisWorkspace.tsx  ViewToolbar.tsx  (+13 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main-window.json
apps/desktop/src-tauri/src/: editor_store.rs  facepack_store.rs  freezer_store.rs  lib.rs  main.rs
bridge/: README.md
bridge/BestScout.Bridge/: BestScout.Bridge.csproj  BridgeServer.cs  DomainRootProbe.cs  DomainSnapshotStore.cs  NullableAttributes.cs  Plugin.cs  Protocol.cs  ReferenceSampleProbe.cs
crates/bestscout-core/: Cargo.toml
crates/bestscout-live/: Cargo.toml
crates/bestscout-packaging/: Cargo.toml
crates/bestscout-packaging/src/: main.rs
docs/: README.md  design-system.md  feature-parity.md  handoff.md  roadmap.md  user-guide.de.md  user-guide.en.md
docs/acceptance/: attribute-freezer.md  bridge-lifecycle.md  bridge-reproducibility.md  clubs.md  competitions.md  documentation.md  editor-workspace.md  linux-release.md  mass-edit-presets.md  newgen-facepacks.md  people.md  player-availability.md  reference-catalog.md  reference-sampling.md  scout-intelligence.md  transfers.md
docs/architecture/: attribute-freezer.md  bridge-lifecycle.md  clubs.md  competitions.md  editor.md  fm26-role-model.md  live-access.md  newgen-facepacks.md  overview.md  people.md  player-availability.md  scout-intelligence.md  transfers.md
docs/compatibility/: fm26-domain-root-probe-plan.md  fm26-steam-23583635.md
docs/release/: linux-packaging.md  release-readiness.md
docs/worklog/: 2026-07-22-people-wip.md
packaging/flatpak/: io.github.maxionice.bestscout.desktop  io.github.maxionice.bestscout.metainfo.xml  io.github.maxionice.bestscout.yml
packaging/steam-deck/: README-DECK.de.md  README-DECK.en.md  launch-bestscout.sh
profiles/fm26/: README.md  steam-23583635.json
scripts/: build-bridge.sh  build-flatpak.sh  build-linux-packages.sh  list-release-assets.mjs  list-release-assets.test.mjs  normalize-linux-packages.sh  prepare-steam-deck.mjs  prepare-steam-deck.test.mjs  verify-docs.test.mjs  verify-linux-bundles.mjs  verify-linux-bundles.test.mjs  verify-release-metadata.mjs  verify-release-readiness.mjs  verify-release-readiness.test.mjs
(+27 files in other folders)
