[workspace]
members = ["crates/bestscout-core", "apps/desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/maxionice/bestscout"

[workspace.dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
