[package]
name = "bestscout-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "bestscout_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
bestscout-core = { path = "../../../crates/bestscout-core" }
serde.workspace = true
tauri = { version = "2.11.5", features = [] }
