[package]
name = "bestscout-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["BestScout Contributors"]
description = "Linux-first scouting and editing suite for Football Manager"
homepage = "https://github.com/maxionice/bestscout"

[lib]
name = "bestscout_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
bestscout-core = { path = "../../../crates/bestscout-core" }
bestscout-live = { path = "../../../crates/bestscout-live" }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
libc = "0.2.188"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
tauri = { version = "2.11.5", features = [] }
thiserror.workspace = true
